# fifoci

./: .gitignore  LICENSE  LICENSE.3RDPARTY  README.md  fabfile.py  flake.nix  requirements.txt
.github/workflows/: build-flake.yml  run-tests.yml
etc/: fifoci.nginx
fifoci/frontend/: admin.py  context_processors.py  importer.py  manage.py  models.py  pyproject.toml  urls.py  views.py  wsgi.py
fifoci/frontend/fifoci/: context_processors.py  urls.py
fifoci/frontend/fifoci/management/commands/: fixup_data.py  import_results.py
fifoci/frontend/fifoci/settings/: base.py  local.py
fifoci/frontend/fifoci/templates/: _results_versions.html  index.html  result-view.html  version-view.html
fifoci/frontend/management/commands/: fixup_data.py  import_results.py
fifoci/frontend/migrations/: 0001_initial.py  0002_alter_version_hash.py  0003_alter_fifotest_shortname.py  0004_alter_result_first_result_alter_result_has_change.py
fifoci/frontend/settings/: base.py  local.py  production.py  test.py
fifoci/frontend/static/: index.html
fifoci/frontend/templates/: _base.html  _results_diff_tbl.html  compare-view.html
fifoci/frontend/templatetags/: diff_utils.py  markup.py
fifoci/frontend/tests/: runner.py  test_api.py  test_importer.py  test_smoke.py  test_version.py
fifoci/runner/: __main__.py  pyproject.toml
fifoci/runner/linux/: run_fifo_test.sh  xorg.conf
fifoci/runner/linux/Config-sw/: Dolphin.ini  GFX.ini
fifoci/runner/linux/Config-uberogl/: Dolphin.ini  GFX.ini
fifoci/runner/linux/Config-vk/: Logger.ini
fifoci/runner/macos/: run_fifo_test.sh
fifoci/runner/macos/Config-mtl/: Dolphin.ini  GFX.ini
fifoci/runner/macos/Config-mvk/: Dolphin.ini  GFX.ini  Logger.ini
fifoci/runner/windows/: run_fifo_test.ps1
fifoci/runner/windows/Config-dx-nv/: GFX.ini
frontend/: manage.py
frontend/fifoci/: admin.py  context_processors.py  models.py  settings.py  urls.py  views.py  wsgi.py
frontend/fifoci/management/commands/: fixup_data.py  import_results.py
frontend/fifoci/migrations/: 0001_initial.py
frontend/fifoci/settings/: base.py  local.py  production.py
frontend/fifoci/static/css/: fifoci.css
frontend/fifoci/static/js/: compare_results.js
frontend/fifoci/templates/: _base.html  _results_cells.html  _results_diff_tbl.html  _results_versions.html  about-view.html  compare-view.html  dff-view.html  index.html  result-view.html  version-view.html
frontend/fifoci/templatetags/: diff_utils.py  markup.py
runner/: runner.py
runner/linux/: run_fifo_test.sh
runner/linux/Config-ogl/: Dolphin.ini  GFX.ini  gfx_opengl.ini
runner/linux/Config-opengl/: gfx_opengl.ini
runner/linux/Config-software/: Dolphin.ini
runner/linux/Config-sw/: Dolphin.ini  GFX.ini  Logger.ini  gfx_software.ini
runner/linux/Config-uberogl/: GFX.ini  Logger.ini
runner/macos/: run_fifo_test.sh
runner/macos/Config-mvk/: Dolphin.ini  GFX.ini  Logger.ini
runner/windows/: run_fifo_test.ps1
runner/windows/Config-dx-nv/: Dolphin.ini  gfx_dx11.ini
