[tool.poetry]
name = "fifoci-frontend"
version = "0.1.0"
description = "The frontend for FifoCI, running at https://fifo.ci/ and hosting test cases and results."
authors = ["Pierre Bourdon <delroth@dolphin-emu.org>"]
license = "BSD-2-Clause"
packages = [{include = "fifoci/frontend", from = "../.."}]

[tool.poetry.scripts]
fifoci-frontend-manage = "fifoci.frontend.manage:main"

[tool.poetry.dependencies]
python = "^3.9"
Markdown = "^3.4.1"
Django = "^2.2"
psycopg2 = "^2.9.5"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
django-debug-toolbar = "^3.2.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
