[project]
name = "fifoci-frontend"
version = "0.1.0"
description = "The frontend for FifoCI, running at https://fifo.ci/ and hosting test cases and results."
authors = [{ name = "Pierre Bourdon", email = "delroth@dolphin-emu.org" }]
requires-python = ">=3.9,<3.10"
license = { text = "BSD-2-Clause" }

dependencies = [
  "Markdown>=3.4.1,<4",
  "Django>=4.1,<4.2",
  "psycopg2-binary>=2.9.5,<3",
  "gunicorn>=20.1.0,<21",
  "django-debug-toolbar>=3.8.1,<4",
  "dj-inmemorystorage>=2.1.0,<3",
]

[project.scripts]
fifoci-frontend-manage = "fifoci.frontend.manage:main"

[dependency-groups]
dev = [
    "black>=22.12.0,<23"
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
  "fifoci.frontend",
  "fifoci.frontend.settings",
]

[tool.setuptools.package-dir]
"fifoci.frontend" = "."

[tool.setuptools.package-data]
"fifoci.frontend" = [
  "templates/**/*",
  "static/**/*",
  "migrations/**/*",
]
