[project]
name = "fifoci-runner"
version = "0.1.0"
description = "FifoCI runner script, driving a Dolphin Emulator instance and collecting rendering results."
authors = [{ name = "Pierre Bourdon", email = "delroth@dolphin-emu.org" }]
requires-python = ">=3.10"
license = { text = "BSD-2-Clause" }

dependencies = [
  "Pillow>=11.3.0,<12",
  "requests>=2.32.5,<3",
]

[project.scripts]
fifoci-runner = "fifoci.runner.__main__:main"

[dependency-groups]
dev = [
    "black>=25.1.0,<26"
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["fifoci.runner"]
include-package-data = true

[tool.setuptools.package-dir]
"fifoci.runner" = "."

[tool.setuptools.package-data]
"fifoci.runner" = ["linux/**", "macos/**", "windows/**"]
